# plist_ffi

./: .gitignore  Cargo.toml  build.rs  justfile
src/: array.rs  creation.rs  dict.rs  getters.rs  import.rs  lib.rs  setters.rs  shims.c  utils.rs
test/: empty.test  integer_set  integer_set.c  integer_set.test  plist_btest.c  plist_cmp.c  plist_jtest.c  plist_test.c
test/data/: dates.test.xml  signedunsigned3.test.unsigned.xml
tools/: plistutil.c
